--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start-frontend": "cd frontend && npm run dev",
     "install-all": "npm run install-backend && npm run install-frontend",
     "install-backend": "cd backend && npm install",
-    "install-frontend": "cd frontend && npm install"
+    "install-frontend": "cd frontend && npm install",
+    "seed": "cd backend && npm run seed",
+    "build-all": "npm run seed && cd frontend && npm run build"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
