--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
     "start-backend": "cd backend && npm start",
     "start-frontend": "cd frontend && npm run dev",
-    "install-all": "npm run install-backend && npm run install-frontend",
+    "install": "npm run install-backend && npm run install-frontend",
     "install-backend": "cd backend && npm install",
     "install-frontend": "cd frontend && npm install",
     "build-all": "npm run seed && npm run build",
