--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "seed": "node seeder.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
